2012-01-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, pre-distclean.rb, ruby-oci8.gemspec: create map files
	    of oci8lib_*.so on mingw32 in case of analyzing a core (minidump) file.

2012-01-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/stmt.c, lib/oci8/oci8.rb,
	  lib/oci8/properties.rb: enable statement caching per session in OCI layer
	    if the Oracle client is 9iR2 or upper.

2012-01-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/oci8.c, lib/oci8/oci8.rb: replace
	    OCILogon() with OCILogon2() and use the latter to use
	    ConnectionPool.
	* test/config.rb: fix to pass lob tests.

2012-01-09  KUBO Takehiro  <kubo@jiubao.org>
	* docs/install-full-client.md: add a new document file.

2012-01-08  KUBO Takehiro  <kubo@jiubao.org>
	* doc/*: remove obsolete documents.

2011-12-15  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb, test/setup_test_object.sql, test/test_object.rb:
	    fix "wrong number of arguments (1 for 2)" when date datatype in a object
	    type is gotten.
	    (repored by Leoš Bitto)

2011-12-13  KUBO Takehiro  <kubo@jiubao.org>
	* VERSION: update to 2.1.0.
	* ext/oci8/error.c, ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/ocidatetime.c,
	  ext/oci8/ocinumber.c, ext/oci8/stmt.c: suppress gcc-4.6 warnings.

2011-12-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/connection_pool.c: fix a buffer overrun in oci8_cpool_initialize().

2011-12-11  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.6 and 2.1.0.
	* README, test/README: rewritten.
	* ext/oci8/connection_pool.c: add a note.

2011-12-10  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_bind_string.rb: suppress "No tests were specified" when
	    the client character set is not UTF-8.

2011-12-10  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, lib/oci8/properties.rb, test/test_datetime.rb:
	    revert OCI8.properties[:time_zone] which was added 5 days ago.